Adding view component

--- a/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/Views/Home/Index.cshtml
+++ b/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/Views/Home/Index.cshtml
@@ -18,6 +18,20 @@
     var count = dataService.GetCount();
 }
 
+
+
+
+<vc:hello-world></vc:hello-world>
+
+
+
+
+
+
+
+
+
+
 <div>@count</div>
 
 @{
