--- a/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/_ViewImports.cshtml
+++ b/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 
 WebApplicationWithIdentity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WebApplicationWithIdentity
