--- a/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/Views/Home/BindModel.cshtml
+++ b/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/Views/Home/BindModel.cshtml
@@ -4,6 +4,10 @@
 
     <form asp-controller="Home" asp-action="BindModel" method="post">
         <input asp-for="YearToBind" />
+        <input asp-for="Password" />
+        <input asp-for="RepeatPassword"/>
+        <input asp-for="Email" />
+        <input asp-for="Number"/>
 
         <input type="submit" name="name" value="" />
     </form>
