--- a/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/Views/Home/BindModel.cshtml
+++ b/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/Views/Home/BindModel.cshtml
@@ -3,6 +3,9 @@
 @model Student
 
     <form asp-controller="Home" asp-action="BindModel" method="post">
+
+        <div asp-validation-summary="All"></div>
+
         <input asp-for="YearToBind" />
         <input asp-for="Password" />
         <input asp-for="RepeatPassword"/>
